feat/ add class sb-restoring to hide sidebar at the change of page

--- a/pkg/admin/gui/front-end/html/sidebar.html
+++ b/pkg/admin/gui/front-end/html/sidebar.html
@@ -1,5 +1,5 @@
 {{ define "sidebar" }}
-<div id="appSidebar" class="collapse collapse-horizontal show">
+<div id="appSidebar" class="collapse collapse-horizontal show" hidden>
   <nav class="sidebar d-flex flex-column flex-shrink-0 p-3 bg-white border-end h-100">
     <div class="mb-2">
         <button class="btn btn-toggle align-items-center rounded w-100 text-start" data-bs-toggle="collapse" data-bs-target="#sec-connection" aria-expanded="true">
