--- a/pkg/admin/gui/front-end/html/index.html
+++ b/pkg/admin/gui/front-end/html/index.html
@@ -1,6 +1,7 @@
 {{ define "index" }}
 <!DOCTYPE html>
   <head>
+    <script>document.documentElement.classList.add('sb-restoring');</script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/webui/static/css/style.css">
