--- a/pkg/admin/gui/front-end/html/partner_management_page.html
+++ b/pkg/admin/gui/front-end/html/partner_management_page.html
@@ -51,15 +51,33 @@
                 <label class="col-form-label">{{ index .tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
                 <select name="addPartnerProtocol" id="addPartnerProtocol" class="form-select protocolConfiguration-select" required>
                   <option value="" disabled {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "" }}selected{{ end }}{{ else }}selected{{ end }}>{{ index .tab "selectProto" }}</option>
-                  <option value="r66" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "r66" }}selected{{ end }}{{ end }}>R66</option>
-                  <option value="r66-tls" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "r66-tls" }}selected{{ end }}{{ end }}>R66-TLS</option>
-                  <option value="sftp" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "sftp" }}selected{{ end }}{{ end }}>SFTP</option>
-                  <option value="http" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "http" }}selected{{ end }}{{ end }}>HTTP</option>
-                  <option value="https" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "https" }}selected{{ end }}{{ end }}>HTTPS</option>
-                  <option value="ftp" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "ftp" }}selected{{ end }}{{ end }}>FTP</option>
-                  <option value="ftps" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "ftps" }}selected{{ end }}{{ end }}>FTPS</option>
-                  <option value="pesit" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "pesit" }}selected{{ end }}{{ end }}>PeSIT</option>
-                  <option value="pesit-tls" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "pesit-tls" }}selected{{ end }}{{ end }}>PeSIT-TLS</option>
+                  {{ if in $.protocolsList "r66" }}
+                      <option value="r66" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "r66" }}selected{{ end }}{{ end }}>R66</option>
+                  {{ end }}
+                  {{ if in $.protocolsList "r66-tls" }}
+                      <option value="r66-tls" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "r66-tls" }}selected{{ end }}{{ end }}>R66-TLS</option>
+                  {{ end }}
+                  {{ if in $.protocolsList "sftp" }}
+                      <option value="sftp" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "sftp" }}selected{{ end }}{{ end }}>SFTP</option>
+                  {{ end }}
+                  {{ if in $.protocolsList "http" }}
+                      <option value="http" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "http" }}selected{{ end }}{{ end }}>HTTP</option>
+                  {{ end }}
+                  {{ if in $.protocolsList "https" }}
+                      <option value="https" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "https" }}selected{{ end }}{{ end }}>HTTPS</option>
+                  {{ end }}
+                  {{ if in $.protocolsList "ftp" }}
+                      <option value="ftp" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "ftp" }}selected{{ end }}{{ end }}>FTP</option>
+                  {{ end }}
+                  {{ if in $.protocolsList "ftps" }}
+                      <option value="ftps" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "ftps" }}selected{{ end }}{{ end }}>FTPS</option>
+                  {{ end }}
+                  {{ if in $.protocolsList "pesit" }}
+                      <option value="pesit" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "pesit" }}selected{{ end }}{{ end }}>PeSIT</option>
+                  {{ end }}
+                  {{ if in $.protocolsList "pesit-tls" }}
+                      <option value="pesit-tls" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "pesit-tls" }}selected{{ end }}{{ end }}>PeSIT-TLS</option>
+                  {{ end }}
                 </select>
               </div>
               <hr style="border-top: 1px solid #ababab;">
@@ -253,15 +271,33 @@
                       <div class="form-input mt-4">
                         <label class="col-form-label">{{ index $.tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
                         <select name="editPartnerProtocol" class="form-select protocolConfiguration-select" required>
-                          <option value="r66" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "r66" }}selected{{ end }}{{ else if eq .Protocol "r66" }}selected{{ end }}>R66</option>
-                          <option value="r66-tls" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "r66-tls" }}selected{{ end }}{{ else if eq .Protocol "r66-tls" }}selected{{ end }}>R66-TLS</option>
-                          <option value="sftp" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "sftp" }}selected{{ end }}{{ else if eq .Protocol "sftp" }}selected{{ end }}>SFTP</option>
-                          <option value="http" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "http" }}selected{{ end }}{{ else if eq .Protocol "http" }}selected{{ end }}>HTTP</option>
-                          <option value="https" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "https" }}selected{{ end }}{{ else if eq .Protocol "https" }}selected{{ end }}>HTTPS</option>
-                          <option value="ftp" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "ftp" }}selected{{ end }}{{ else if eq .Protocol "ftp" }}selected{{ end }}>FTP</option>
-                          <option value="ftps" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "ftps" }}selected{{ end }}{{ else if eq .Protocol "ftps" }}selected{{ end }}>FTPS</option>
-                          <option value="pesit" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "pesit" }}selected{{ end }}{{ else if eq .Protocol "pesit" }}selected{{ end }}>PeSIT</option>
-                          <option value="pesit-tls" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "pesit-tls" }}selected{{ end }}{{ else if eq .Protocol "pesit-tls" }}selected{{ end }}>PeSIT-TLS</option>
+                          {{ if in $.protocolsList "r66" }}
+                              <option value="r66" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "r66" }}selected{{ end }}{{ else if eq .Protocol "r66" }}selected{{ end }}>R66</option>
+                          {{ end }}
+                          {{ if in $.protocolsList "r66-tls" }}
+                              <option value="r66-tls" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "r66-tls" }}selected{{ end }}{{ else if eq .Protocol "r66-tls" }}selected{{ end }}>R66-TLS</option>
+                          {{ end }}
+                          {{ if in $.protocolsList "sftp" }}
+                              <option value="sftp" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "sftp" }}selected{{ end }}{{ else if eq .Protocol "sftp" }}selected{{ end }}>SFTP</option>
+                          {{ end }}
+                          {{ if in $.protocolsList "http" }}
+                              <option value="http" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "http" }}selected{{ end }}{{ else if eq .Protocol "http" }}selected{{ end }}>HTTP</option>
+                          {{ end }}
+                          {{ if in $.protocolsList "https" }}
+                              <option value="https" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "https" }}selected{{ end }}{{ else if eq .Protocol "https" }}selected{{ end }}>HTTPS</option>
+                          {{ end }}
+                          {{ if in $.protocolsList "ftp" }}
+                              <option value="ftp" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "ftp" }}selected{{ end }}{{ else if eq .Protocol "ftp" }}selected{{ end }}>FTP</option>
+                          {{ end }}
+                          {{ if in $.protocolsList "ftps" }}
+                              <option value="ftps" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "ftps" }}selected{{ end }}{{ else if eq .Protocol "ftps" }}selected{{ end }}>FTPS</option>
+                          {{ end }}
+                          {{ if in $.protocolsList "pesit" }}
+                              <option value="pesit" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "pesit" }}selected{{ end }}{{ else if eq .Protocol "pesit" }}selected{{ end }}>PeSIT</option>
+                          {{ end }}
+                          {{ if in $.protocolsList "pesit-tls" }}
+                              <option value="pesit-tls" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "pesit-tls" }}selected{{ end }}{{ else if eq .Protocol "pesit-tls" }}selected{{ end }}>PeSIT-TLS</option>
+                          {{ end }}
                         </select>
                       </div>
                       <hr style="border-top: 1px solid #ababab;">
