--- a/pkg/admin/gui/front-end/html/partner_management_page.html
+++ b/pkg/admin/gui/front-end/html/partner_management_page.html
@@ -110,6 +110,7 @@
         </button>
         <div class="collapse" id="filterCollapse">
         <form method="get" class="p-3 border rounded bg-light">
+          <input type="hidden" name="applyFilters" value="true">
             <label class="ms-3">{{ index .tab "sort" }}:
             <select name="orderAsc" class="form-select d-inline w-auto">
                 <option value="true" {{ if .filter.OrderAsc }}selected{{ end }}>A → Z</option>
@@ -128,7 +129,7 @@
             </label>
             <div style="float:right">
               <button id="applyBtn" type="submit" class="btn btn-success">{{ index .tab "apply" }}</button>
-              <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='partner_management'">{{ index .tab "reset" }}</button>
+              <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='partner_management?clearFiltersPage=partner_management_page'">{{ index .tab "reset" }}</button>
             </div>
             <div class="mt-3">
             <label class="ms-3 me-3">{{ index .tab "protocol" }}: </label>
