--- a/pkg/admin/gui/front-end/html/transfer_monitoring_page.html
+++ b/pkg/admin/gui/front-end/html/transfer_monitoring_page.html
@@ -416,6 +416,7 @@
     </button>
     <div class="collapse" id="filterCollapse">
       <form method="get" class="p-3 border rounded bg-light">
+        <input type="hidden" name="applyFilters" value="true">
         <label class="ms-3">{{ index .tab "sort" }} :
           <select name="order" class="form-select d-inline w-auto">
             <option value="date-start" {{ if and (eq .filter.OrderBy "start") (not .filter.OrderAsc) }}selected{{ end }}>Date ↓</option>
@@ -436,7 +437,7 @@
         </label>
         <div style="float:right">
           <button id="applyBtn" type="submit" class="btn btn-success">{{ index .tab "apply" }}</button>
-          <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='transfer_monitoring'">{{ index .tab "reset" }}</button>
+          <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='transfer_monitoring?clearFiltersPage=transfer_monitoring_page'">{{ index .tab "reset" }}</button>
         </div>
         <hr style="border-top: 1px solid #ababab;">
         <div>
