--- a/pkg/admin/gui/front-end/html/cloud_instance_management_page.html
+++ b/pkg/admin/gui/front-end/html/cloud_instance_management_page.html
@@ -113,6 +113,7 @@
     </button>
     <div class="collapse" id="filterCollapse">
       <form method="get" class="p-3 border rounded bg-light">
+        <input type="hidden" name="applyFilters" value="true">
         <label class="ms-3">{{ index .tab "sort" }}:
           <select name="orderAsc" class="form-select d-inline w-auto">
             <option value="true" {{ if .filter.OrderAsc }}selected{{ end }}>A → Z</option>
@@ -131,7 +132,7 @@
         </label>
         <div style="float:right">
           <button id="applyBtn" type="submit" class="btn btn-success">{{ index .tab "apply" }}</button>
-          <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='cloud_instance_management'">{{ index .tab "reset" }}</button>
+          <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='cloud_instance_management?clearFiltersPage=cloud_instance_management_page'">{{ index .tab "reset" }}</button>
         </div>
       </form>
     </div>
