--- a/pkg/admin/gui/front-end/html/server_authentication_page.html
+++ b/pkg/admin/gui/front-end/html/server_authentication_page.html
@@ -91,6 +91,7 @@
         <div class="collapse" id="filterCollapse">
             <form method="get" class="p-3 border rounded bg-light">
                 <input type="hidden" name="serverID" value="{{ .server.ID }}">
+                <input type="hidden" name="applyFilters" value="true">
                 <label class="ms-3">{{ index .tab "sort" }}:
                     <select name="orderAsc" class="form-select d-inline w-auto">
                         <option value="true" {{ if .filter.OrderAsc }}selected{{ end }}>A → Z</option>
@@ -109,7 +110,7 @@
                 </label>
                 <div style="float:right">
                     <button id="applyBtn" type="submit" class="btn btn-success">{{ index .tab "apply" }}</button>
-                    <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='server_authentication?serverID={{ .server.ID }}'">{{ index .tab "reset" }}</button>
+                    <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='server_authentication?serverID={{ .server.ID }}?clearFiltersPage=server_authentication_page'">{{ index .tab "reset" }}</button>
                 </div>
             </form>
         </div>
