--- a/pkg/admin/gui/front-end/html/server_management_page.html
+++ b/pkg/admin/gui/front-end/html/server_management_page.html
@@ -137,6 +137,7 @@
     </button>
     <div class="collapse" id="filterCollapse">
       <form method="get" class="p-3 border rounded bg-light">
+        <input type="hidden" name="applyFilters" value="true">
         <label class="ms-3">{{ index .tab "sort" }}:
           <select name="orderAsc" class="form-select d-inline w-auto">
             <option value="true" {{ if .filter.OrderAsc }}selected{{ end }}>A → Z</option>
@@ -155,7 +156,7 @@
         </label>
         <div style="float:right">
           <button id="applyBtn" type="submit" class="btn btn-success">{{ index .tab "apply" }}</button>
-          <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='server_management'">{{ index .tab "reset" }}</button>
+          <button id="resetBtn" type="button" class="btn btn-secondary ms-2" onclick="window.location='server_management?clearFiltersPage=server_management_page'">{{ index .tab "reset" }}</button>
         </div>
         <div class="mt-3">
             <label class="ms-3 me-3">{{ index .tab "protocol" }}: </label>
